Angular2 Property Databinding with custom component part1

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -7,4 +7,16 @@ body {
 
 .red {
   color: red;
-} 
+}
+
+.parent {
+  border: 1px solid #ccc;
+  background-color: #eee;
+  padding: 10px;
+}
+
+.child{
+  border: 1px solid black;
+  background-color: #ccc;
+  padding: 10px;
+}
