--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,1 +1,1 @@
-body{padding:32px;margin:32px;font-family:Roboto,Arial,sans-serif;font-size:16px}.red{color:red}
+body{padding:32px;margin:32px;font-family:Roboto,Arial,sans-serif;font-size:16px}.red{color:red}.parent{border:1px solid #ccc;background-color:#eee;padding:10px}.child{border:1px solid #000;background-color:#ccc;padding:10px}
