2nd project - Input Confirmation: The Input Component

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -5,18 +5,30 @@ body {
   font-size: 16px;
 }
 
-.red {
-  color: red;
-}
-
-.parent {
+.container {
+  padding: 16px;
   border: 1px solid #ccc;
-  background-color: #eee;
-  padding: 10px;
+  background: #eee;
+  margin-bottom: 32px;
 }
 
-.child{
-  border: 1px solid black;
-  background-color: #ccc;
-  padding: 10px;
+.button {
+  padding: 4px 8px;
+  border: 1px solid #ccc;
+  background-color: white;
+  border-radius: 3px;
+  cursor: default;
+}
+
+button:not([disabled]) {
+  cursor: pointer;
+}
+
+button:not([disabled]):hover {
+  background-color: salmon;
+  color: : white;
+}
+
+.highlight {
+  font-weight: bold;
 }
