--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -26,7 +26,7 @@ button:not([disabled]) {
 
 button:not([disabled]):hover {
   background-color: salmon;
-  color: : white;
+  color: white;
 }
 
 .highlight {
